# dynamic-loader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  afl-setup.sh  loader-gcc.specs.in
alloc/: CMakeLists.txt  ld_malloc.c  ld_malloc.h
crt/: CMakeLists.txt  crt.c  crt.h  pie-crt.c  static-pie-crt.c
loader/: CMakeLists.txt  basepath.h.in  debug.c  debug.h  deps.c  deps.h  dlfcn.c  dso.c  dso.h  dynamic-list.txt  dynlink.c  dynlink.h  elf.c  elf.h  env.c  env.h  init.c  init.h  ld_malloc.c  ld_malloc_internal.h  libpath.c  libpath.h  loader.c  loader.h  main.c  reloc.c  reloc.h  sym.c  sym.h  symhash.c  util.c  util.h
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  dlfcn.h  start.c  string.h  syscall.c  syscall.h
tests/shared/: CMakeLists.txt  init.c  string.c  test.c
